--- a/producer.yaml
+++ b/producer.yaml
@@ -18,6 +18,17 @@ spec:
      - image: producerimage
        name : producer
        imagePullPolicy: IfNotPresent
+       env:
+        - name: TRAFFIC_INTERVAL
+          value : "1"
+        - name: KAFKA_HOST 
+          value : "172.31.38.67:29092"
+        - name: TOPIC 
+          value : "myTopic1"
+    
+
+
+
 ---
 apiVersion: v1
 kind: Service
